@@ -1,5 +1,9 @@
 2013-06-16  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Fix casts when compiling coreboot-specific code for 64-bit EFI.
+
+2013-06-16  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Don't try to detect cbfs on *-emu.
 
 2013-06-16  Vladimir Serbinenko  <phcoder@gmail.com>
